--- a/estilo.css
+++ b/estilo.css
@@ -1,26 +1,58 @@
 /* Fuentes */
 
 @font-face {
-  font-family: 'Atlas Grotesk Web';
-  src: url('fonts/AtlasGrotesk-Regular.otf');
+  font-family: 'ARCADE';
+  src: url('css/fonts/arcade/ARCADE.ttf');
   font-weight:  600;
   font-style:   normal;
   font-stretch: normal;
 }
 
 @font-face {
-  font-family: 'Canela Web';
-  src: url('fonts/canela_roman.otf');
-  font-weight:  700;
+  font-family: 'YOSTER';
+  src: url('css/fonts/yoster/yoster.ttf');
+  font-weight:  600;
   font-style:   normal;
   font-stretch: normal;
 }
-
 /* Estilos */
 
 body {
     background: white;
     font-family: 'Calibri';
+    background-image: url("images/bg-titulo.png");
+}
+
+section{
+  background-color: white;
+}
+
+.img-init{
+  height: 200px;
+  width: 200px;
+  align-content: center;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+}
+
+.btn-vamos{
+  font-family: YOSTER;
+  margin: 5px;
+  line-height: 30px;
+  font-weight: 30;
+  letter-spacing: 5px;
+  color: black;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border: none;
+  border-radius: 8px;
 }
 
 .white-wrapper {
@@ -34,9 +66,13 @@ body {
     font-family: "Calibri";
 }
 
+.wrapper {
+  display: none;
+}
+
 .opening-title {
     font-size: 50px;
-    font-family: 'Canela Web';
+    font-family: 'YOSTER';
     text-align: center;
     text-transform: uppercase;
     width: 75%;
@@ -46,6 +82,8 @@ body {
     margin-top: 50px;
     margin-bottom: 30px;
     letter-spacing: 6px;
+    color: black;
+    background-color: white;
 }
 
 .opening-title .small {
@@ -54,6 +92,7 @@ body {
     line-height: 30px;
     font-weight: 30;
     letter-spacing: 5px;
+
 }
 
 .opening-title .big {
@@ -62,3 +101,29 @@ body {
     font-size: 50px;
     line-height: 1.5;
 }
+
+.col-md-6{
+  text-align: center;
+  align-items: center;
+}
+
+.col-md-12 .elecciones{
+  text-align: center;
+  align-items: center;
+}
+
+#intro {
+  position: relative;
+  top: 48%;
+  left: 10%;
+  width: 80%;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+h1 { font-size: 60px; line-height: 1.1; font-family: 'ARCADE'; text-align: center;}
+h2 { font-size: 48px; line-height: 1.2; font-family: 'Calibri';}
+h3 { font-size: 36px; line-height: 1.3; font-family: 'Calibri';}
+h4 { font-size: 24px; line-height: 1.4; font-family: 'Calibri'; color: blue;}
+h5 { font-size: 21px; line-height: 1.5; font-family: 'Calibri'; color: blue;}
+h6 { font-size: 18px; line-height: 1.6; font-family: 'Calibri';}
