--- a/estilo.css
+++ b/estilo.css
@@ -27,6 +27,13 @@ section{
   background-color: white;
 }
 
+h1 { font-size: 60px; line-height: 1.1; font-family: 'ARCADE'; text-align: center; color: blue}
+h2 { font-size: 48px; line-height: 1.2; font-family: 'Calibri';}
+h3 { font-size: 36px; line-height: 1.3; font-family: 'Calibri';}
+h4 { font-size: 24px; line-height: 1.4; font-family: 'Calibri'; color: blue;}
+h5 { font-size: 21px; line-height: 1.5; font-family: 'Calibri'; color: blue;}
+h6 { font-size: 18px; line-height: 1.6; font-family: 'Calibri';}
+
 .img-init{
   height: 200px;
   width: 200px;
@@ -112,6 +119,35 @@ section{
   align-items: center;
 }
 
+.btn-sig{
+  position: absolute;
+    bottom: 10px;
+    left: 50%;
+    margin-left: -104.5px;
+}
+
+
+a {
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
+}
+
+a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.previous {
+  background-color: #f1f1f1;
+  color: black;
+}
+
+.next {
+  background-color: #4CAF50;
+  color: white;
+}
+
 #intro {
   position: relative;
   top: 48%;
@@ -120,10 +156,3 @@ section{
   text-align: center;
   text-transform: uppercase;
 }
-
-h1 { font-size: 60px; line-height: 1.1; font-family: 'ARCADE'; text-align: center;}
-h2 { font-size: 48px; line-height: 1.2; font-family: 'Calibri';}
-h3 { font-size: 36px; line-height: 1.3; font-family: 'Calibri';}
-h4 { font-size: 24px; line-height: 1.4; font-family: 'Calibri'; color: blue;}
-h5 { font-size: 21px; line-height: 1.5; font-family: 'Calibri'; color: blue;}
-h6 { font-size: 18px; line-height: 1.6; font-family: 'Calibri';}
