--- a/estilo.css
+++ b/estilo.css
@@ -139,8 +139,8 @@ a:hover {
 }
 
 .previous {
-  background-color: #f1f1f1;
-  color: black;
+  background-color: #4CAF50;
+  color: white;
 }
 
 .next {
